--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                 </tr>
             </tbody>
         </table>
-        <form action="cadastro.php" id="cadastro">
+        <form action="cadastro.php" id="cadastro" autocomplete="off">
             <h1>Adicionar novo paciente</h1>
             <ul class="mensagem-erro">
 
