--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <h1>Cryslara Nutricionista</h1>
     </header>
         <section id="secao-pacientes">
-            <h2>Meus pacientes</h2> <hr>
+            <h2>Meus pacientes</h2>
             <section id="filtro-paciente">
                 <label for="filtro" id="label-filtro">Filtrar:</label>
                 <input type="text" id="filtro" placeholder="Digite o nome do paciente">
